unpackaged/main/default/objects/AdditionalIncome__c/AdditionalIncome__c.object-meta.xml
<CustomObject>
    <label>Additional Income</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Incomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>