unpackaged/main/default/objects/AdditionalIncome__c/fields/IncomeType__c.field-meta.xml
<CustomField>
    <fullName>IncomeType__c</fullName>
    <label>Income Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>PTO</fullName>
            </value>
            <value>
                <fullName>PFML Income</fullName>
            </value>
            <value>
                <fullName>STD Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>