unpackaged/main/default/objects/AdditionalIncome__c/fields/PaymentSpecification__c.field-meta.xml
<CustomField>
    <fullName>PaymentSpecification__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payment Specification</label>
    <referenceTo>cve__PaymentSpecification__c</referenceTo>
    <relationshipLabel>Additional Incomes</relationshipLabel>
    <relationshipName>AdditionalIncomes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>