unpackaged/main/default/objects/AdditionalIncome__c/fields/PFMLClaim__c.field-meta.xml
<CustomField>
    <fullName>PFMLClaim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PFML Claim</label>
    <referenceTo>cvab__Claim__c</referenceTo>
    <relationshipLabel>Additional Incomes</relationshipLabel>
    <relationshipName>AdditionalIncomes</relationshipName>
    <type>Lookup</type>
</CustomField>