unpackaged/main/default/objects/AdditionalIncome__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>