unpackaged/main/default/objects/AdditionalIncome__c/fields/STDClaim__c.field-meta.xml
<CustomField>
    <fullName>STDClaim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>STD Claim</label>
    <referenceTo>cve__Claim__c</referenceTo>
    <relationshipLabel>Additional Incomes</relationshipLabel>
    <relationshipName>Additional_Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>